force-app/main/default/objects/Eligibility_Criteria__c/Eligibility_Criteria__c.object-meta.xml
<CustomObject>
    <label>Eligibility Criteria</label>
    <nameField>
        <label>Eligibility Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligibility Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>