force-app/main/default/objects/Eligibility_Criteria__c/fields/Criteria_JSON__c.field-meta.xml
<CustomField>
    <fullName>Criteria_JSON__c</fullName>
    <label>Criteria JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>