force-app/main/default/objects/Eligibility_Criteria__c/fields/Eligibility_Criteria_Id__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria_Id__c</fullName>
    <displayFormat>EC-{00000}</displayFormat>
    <label>Eligibility Criteria Id</label>
    <type>AutoNumber</type>
</CustomField>