force-app/main/default/objects/Eligibility_Criteria__c/fields/Eligibility_Type__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Type__c</fullName>
    <label>Eligibility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Criteria</fullName>
            </value>
            <value>
                <fullName>Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>