force-app/main/default/objects/Eligibility_Criteria__c/fields/Fail_Message__c.field-meta.xml
<CustomField>
    <fullName>Fail_Message__c</fullName>
    <label>Fail Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>