force-app/main/default/objects/Eligibility_Criteria__c/fields/Pass_Message__c.field-meta.xml
<CustomField>
    <fullName>Pass_Message__c</fullName>
    <label>Pass Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>