force-app/main/default/objects/Eligibility_Criteria__c/fields/Yearly_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yearly Scheme</label>
    <referenceTo>Yearly_Schemes__c</referenceTo>
    <relationshipLabel>Eligibility Criteria</relationshipLabel>
    <relationshipName>Eligibility_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>