force-app/main/default/objects/Eligibility_Criteria__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Yearly_Scheme__c</columns>
    <columns>Stage__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Eligibility_Type__c</columns>
    <columns>Validation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>